Button Group margin and align fixed

--- a/Survey/style_survey.css
+++ b/Survey/style_survey.css
@@ -1,6 +1,3 @@
-
-
-
 :root {
   --survey-primary-color: #ED008C;
   --survey-secondary-color: #770045;
@@ -21,17 +18,17 @@
   width: 100%;
   border-top: 1px solid var(--survey-primary-color);
   text-align: center;
-  padding: 16px 0;
+  padding: 24px 0;
 }
 
-.button-group{
+.button-group {
   display: flex;
   align-items: center;
 }
 
-.button-group>p{
-  margin-right: 8px;
+.button-group>p {
   font-weight: bold;
+  margin: 0 8px 0 0;
 }
 
 .article-survey .article-survey-button {
@@ -51,7 +48,7 @@
   color: var(--survey-white-color);
 }
 
-.article-survey-button-disabled{
+.article-survey-button-disabled {
   background-color: var(--survey-gray-color) !important;
   color: var(--survey-white-color) !important;
   border: 1px solid var(--survey-gray-color) !important;
@@ -82,7 +79,7 @@
   margin-bottom: 8px;
 }
 
-.header-feedback-survey-dropdown>p{
+.header-feedback-survey-dropdown>p {
   font-weight: bold;
   margin: 8px 0;
 }
@@ -108,7 +105,7 @@
 .reason-negative-feedback label {
   width: 100%;
   cursor: pointer;
- 
+
 }
 
 .reason-negative-feedback input[type="radio"] {
@@ -134,4 +131,3 @@
 .feedback-survey-dropdown-is-closed {
   display: none;
 }
-
